Remove unnecessary throws
Closes #12496

Signed-off-by: Satia Herfert <satiaherfert@gmx.de>